tests/ui/feature-gates/feature-gate-custom_test_frameworks.stderr
error[E0658]: use of unstable library feature `custom_test_frameworks`: custom test frameworks are an unstable feature
  --> $DIR/feature-gate-custom_test_frameworks.rs:3:3
   |
LL | #[test_case]
   |   ^^^^^^^^^
   |
   = note: see issue #50297 <https://github.com/rust-lang/rust/issues/50297> for more information
   = help: add `#![feature(custom_test_frameworks)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: custom test frameworks are an unstable feature
  --> $DIR/feature-gate-custom_test_frameworks.rs:1:1
   |
LL | #![test_runner(main)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #50297 <https://github.com/rust-lang/rust/issues/50297> for more information
   = help: add `#![feature(custom_test_frameworks)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
